B&L QA/objects/QuoteLineItem__c.object
<CustomObject>
    <description>QuoteLineItem</description>
    <fields>
        <fullName>BundleDescr__c</fullName>
        <description>Concatenation of descriptions (user input names) of bundles the product appears in.</description>
        <label>Bundle Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Id__c</fullName>
        <description>Bundle that this product is part of</description>
        <inlineHelpText>Bundle that this product is part of</inlineHelpText>
        <label>Bundle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>ContractTerm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractedPrice__c</fullName>
        <label>ContractedPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PeopleSoft_Price__c</fullName>
        <description>PeopleSoft Price retrieved using a Web Service</description>
        <label>Current PeopleSoft Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PeopleSoft_Price_per_Unit__c</fullName>
        <description>PeopleSoft Retrieved Price divided by the Units Per Box Field</description>
        <label>Current PeopleSoft Price per Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_off_PeopleSoft_Pct__c</fullName>
        <description>Discount % between current PS price and contracted price</description>
        <formula>IF (Current_PeopleSoft_Price_per_Unit__c &gt; 0, ((Current_PeopleSoft_Price_per_Unit__c  -  ContractedPrice__c )/  Current_PeopleSoft_Price_per_Unit__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount off PeopleSoft price in %</inlineHelpText>
        <label>Discount off PeopleSoft %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_off_PeopleSoft_dollars__c</fullName>
        <description>Discounted PeopleSoft $ calculated as Current PeopleSoft Price minus Contracted Price</description>
        <formula>Current_PeopleSoft_Price_per_Unit__c  -  ContractedPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discounted $ from the PeopleSoft Price</inlineHelpText>
        <label>Discount off PeopleSoft $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Quote ID</label>
        <referenceTo>CameleonCPQ__Quote__c</referenceTo>
        <relationshipName>CPQ_QuoteLineItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Approval__c</fullName>
        <description>Shows the approval information for each product.</description>
        <inlineHelpText>Shows the approval information for each product.</inlineHelpText>
        <label>Line Approval</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>Margin on Product Line</description>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Discounted_Floor_Price__c</fullName>
        <description>Non Discounted Floor Price (passed from Cameleon)</description>
        <label>Non Discounted Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Price_As_Of_Date__c</fullName>
        <description>Date Time that the PS Price was populated</description>
        <label>PeopleSoft Price As Of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Price_Success_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Price Success Flag</description>
        <label>PeopleSoft Price Success Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Erosion__c</fullName>
        <description>Displays a Green box if the Discount PeopleSoft $ &gt;= 0, else displays Red</description>
        <formula>IF(
Discount_off_PeopleSoft_dollars__c &lt;= 0.00,
IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;Green&quot;), 
IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;)
)</formula>
        <inlineHelpText>Displays a Green box if the Discount PeopleSoft $ &gt;= 0, else displays Red</inlineHelpText>
        <label>Price Erosion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>ProductFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Annual Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <label>Total Contract Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>UOM for this opportunity product</description>
        <inlineHelpText>UOM for this opportunity product</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitsPerBox__c</fullName>
        <description>If sold as a box, how many units are in the box?</description>
        <inlineHelpText>If sold as a box, how many units are in the box?</inlineHelpText>
        <label>Units Per Box</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CameleonQuoteLineItem</label>
    <nameField>
        <label>QuoteLineItem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuoteLineItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>